Statement about missing proofs in B5A4

--- a/homeworks/05/sol/05.tex
+++ b/homeworks/05/sol/05.tex
@@ -154,7 +154,9 @@ Schließlich gilt unabhängig von der Wahl von $n\in\mathbb{N}$, dass $P(\{\omeg
 $\limsup P(X_n\in A)=1$.
 
 Als Gegenbeispiel zu Punkt 3 können wir Aufgabe 4 von Blatt 4 wählen, wo $X_n$ stochastisch, aber nicht fast sicher konvergierte.
-Sei $A=B_\varepsilon(0)$, dann ist $\limsup_{n\to\infty}P(X_n\in A)=1$, ich finde jedoch immer ein $n\in\mathbb{N}$, sodass $X_n>\varepsilon$, sodass $\limsup X_n\notin A$ und $P(\limsup X_n\in A)<1$.
+Sei $A=B_\varepsilon(0)$, dann ist $\limsup_{n\to\infty}P(X_n\in A)=1$, ich finde jedoch immer ein $n\in\mathbb{N}$, sodass $X_n>\varepsilon$, wodurch $\limsup X_n\notin A$ und somit $P(\limsup X_n\in A)<1$.
+
+\emph{Es fehlen noch Gegenbeispiele zu Punkt 1. und Punkt 2.}
 \newpage
 
 \paragraph{B5A5}
