--- a/homeworks/05/sol/05.tex
+++ b/homeworks/05/sol/05.tex
@@ -170,7 +170,9 @@ Zeigen Sie oder widerlegen Sie durch ein Gegenbeispiel, dass die folgenden Ereig
   \text{5.~}&\{\omega\in\Omega\mid (X_n(\omega))_n\text{ enthält eine monoton wachsende Teilfolge}\}\,,\\
   \text{6.~}&\{\omega\in\Omega\mid \limsup S_n(\omega)>\liminf S_n(\omega)\}\,.
 \end{align*}
-Zumindest bei Punkt 1-4. kann ich $X_n=1$ wählen, damit die Ereignisse nicht terminal sein können.
+Zumindest bei Punkt 1 bis Punkt 4 kann ich $X_n=1$ wählen, damit die Ereignisse nicht terminal sein können.
+
+\emph{Hier fehlt noch eine Aussage zu Punkt 5 und Punkt 6.}
 \newpage
 
 \bibliography{../../../books/wt}
