Final version, added something more to B5A5.5 and B5A5.6

--- a/homeworks/05/sol/05.tex
+++ b/homeworks/05/sol/05.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-\usepackage[a4paper,margin=1.875in,top=1.1in,bottom=1.1in]{geometry}
+\usepackage[a4paper,margin=1.875in,top=1.875in,bottom=1.875in]{geometry}
 
 \usepackage{amsmath,mathtools,bbm,amssymb}
 \usepackage[german]{babel}
@@ -97,8 +97,7 @@ Somit ist $\omega\in\limsup_{n\to\infty}A_n$.
 
 Nun überlegen wir uns, warum die Ungleichungen gelten.
 $\mathbbm{1}_{A_n}$ hat $\mathbbm{1}_\Omega$ als integrierbare Majorante.
-Damit gelten die erste und dritte Ungleichung gelten jeweils nach dem Lemma von Fatou, \emph{beziehungsweise die dritte nach majorisierter Konvergenz}.
-
+Damit gelten die erste und dritte Ungleichung gelten jeweils nach dem Lemma von Fatou, beziehungsweise die dritte zusätzlich nach majorisierter Konvergenz.
 \emph{Hier fehlt noch eine Rechnung für die mittlere Ungleichung.}
 \newpage
 
@@ -175,9 +174,24 @@ Zeigen Sie oder widerlegen Sie durch ein Gegenbeispiel, dass die folgenden Ereig
   \text{5.~}&\{\omega\in\Omega\mid (X_n(\omega))_n\text{ enthält eine monoton wachsende Teilfolge}\}\,,\\
   \text{6.~}&\{\omega\in\Omega\mid \limsup S_n(\omega)>\liminf S_n(\omega)\}\,.
 \end{align*}
-Zumindest bei Punkt 1 bis Punkt 4 kann ich $X_n=1$ wählen, damit die Ereignisse nicht terminal sein können.
+Zu Punkt 1, wenn für alle $\omega\in\Omega$ und alle $n\in\mathbb{N}$ gilt $X_n(\omega)\neq0$, dann ist $\{\omega\in\Omega\mid X_n(\omega)=0\}=\emptyset$ und somit ein terminales Ereignis.
+Sei $X_0=\mathrm{id}$, sowie $X_n=1$ für $n\geq1$.
+Dann ist $\{\omega\in\Omega\mid X_n(\omega)=0\}=\{0\}$ für $n=0$ und $\{\omega\in\Omega\mid X_n(\omega)=0\}=\emptyset$ sonst.
+Außerdem ist $\sigma(X_0)=\mathrm{id}^{-1}({\cal B}(\mathbb{R}))={\cal B}(\mathbb{R})$ und $\sigma(X_n)=\{\emptyset,\Omega\}$ sonst.
+Dann ist $\bigcup_{m\geq1}\sigma(X_m)=\{\emptyset,\Omega\}$ und somit $\sigma\bigl(\bigcap_{m\geq 1}\sigma(X_m)\bigr)=\{\emptyset,\Omega\}$, wodurch auch $\bigcap_{n\geq0}\sigma\bigl(\bigcup_{m\geq n}\sigma(X_m)\bigr)=\{\emptyset,\Omega\}$.
+Somit ist $\{\omega\in\Omega\mid X_0(\omega)=0\}$ kein terminales Ereignis.
 
-\emph{Hier fehlt noch eine Aussage zu Punkt 5 und Punkt 6.}
+Das Beispiel von oben ist auch ein Gegenbeispiel für Punkt 2, denn auch hier ist $\{\omega\in\Omega\mid X_n(\omega)=0\text{ für ein $n\in\mathbb{N}$}\}=\{0\}$, weil sonst ja nie irgendein $\omega\in\Omega$ auf 0 abbildet.
+
+Damit ist es auch ein Gegenbeispiel zu Punkt 3 und Punkt 4, denn $\{0\}$ ist eine endliche Teilmenge der natürlichen Zahlen.
+Außerdem ist ebenfalls $\{S_n(\omega)=0\}=\{0\}$.
+
+$A_5=\{\omega\in\Omega\mid (X_n(\omega))_n\text{ enthält eine monoton wachsende Teilfolge}\}$ aus Punkt 5 ist in jedem $\sigma(X_n)$ enthalten sofern es nicht leer ist, denn ich kann für ein beliebiges $n\in\mathbb{N}$ die Teilfolge mit $(X_{n_k}(\omega))_k$ mit $n_0>n$ betrachten, sodass $A_5\in\sigma(X_n)$.
+Da $n\in\mathbb{N}$ beliebig gewählt ist, gilt hierdurch auch $A_5\in\bigcap_{n\geq1}\sigma\bigl(\bigcup_{m\geq n}\sigma(X_m)\bigr)$, also ein terminales Ereignis.
+
+Entsprechend ist $A_6=\{\omega\in\Omega\mid \limsup S_n(\omega)>\liminf S_n(\omega)\}$ ein terminales Ereignis.
+Wähle ein beliebiges $m\in\mathbb{N}$, dann ist $\limsup S_n(\omega)>\liminf S_n(\omega)$ genau dann, wenn $\limsup_n\sum_{k=m}^n X_k>\liminf_n\sum_{k=m}^n X_k$ und $\{\omega\in\Omega\mid \limsup_n\sum_{k=m}^n X_k>\liminf_n\sum_{k=m}^n X_k\}\subset\sigma(X_n)$.
+Wieder gilt $A_6\in\bigcap_{n\geq1}\sigma\bigl(\bigcup_{m\geq n}\sigma(X_m)\bigr)$, da $n\in\mathbb{N}$ beliebig gewählt war.
 \newpage
 
 \bibliography{../../../books/wt}
