Added remaining tasks for sheet 6

--- a/homeworks/06/sol/06.tex
+++ b/homeworks/06/sol/06.tex
@@ -63,11 +63,25 @@ Verwenden Sie dazu das Lemma von Borel--Cantelli.
 \newpage
 
 \paragraph{B6A3}
-
+Seien $X_1,X_2,\dots$ unabhängige Zufallsvariablen mit $E[X_n]=0$ für jedes $n\in\mathbb{N}$ und $V:=\sup\{\operatorname{Var}[X_n]:n\in\mathbb{N}\}<\infty$.
+Definiere $S_n=X_1+\cdots+X_n$.
+Dann gilt für jedes $\varepsilon>0$
+\[
+  \limsup_{n\to\infty}\frac{|S_n|}{n^{1/2}(\log(n))^{1/2+\varepsilon}}=0\quad\text{fast sicher.}
+\]
+\emph{Hinweis: Definieren Sie $k_n=2^n$ und $l(n)=n^{1/2}(\log(n))^{1/2+\varepsilon}$ für $n\in\mathbb{N}$ und betrachten Sie $l(k_{n+1})/l(k_n)$.
+  Zeigen Sie, dass für hinreichend großes $n$ und für $k\in\mathbb{N}$ mit $k_{n-1}\leq k\leq k_n$ gilt $\frac{|S_k|}{l(k)}\leq\frac{2|S_k|}{l({k_n})}$.
+Verwenden Sie nun die Kolmogorov'sche Ungleichung und Borel--Cantelli, um zu zeigen, dass für beliebiges $\delta>0$ gilt, dass $\limsup_{n\to\infty}l(k_n)^{-1}\max\{|S_k|: k\leq k_n\}\leq\delta$ fast sicher.}
 \newpage
 
 \paragraph{B6A4}
-
+Beweisen Sie folgende Aussagen
+\begin{enumerate}
+\item[1.] Sei $(a_n)_{n\in\mathbb{N}}$ eine Folge mit $a_n\geq0$ und $\sum_{n=1}^\infty a_n<\infty$, dann folgt $\lim_{k\to\infty}\sum_{n=k}^\infty a_n=0$.
+\item[2.] Sei $(a_n)_{n\in\mathbb{N}}$ eine monotone Folge und es gebe eine Teilfolge $(a_{n_k})_{k\in\mathbb{N}}$, sodass $a_{n_k}\to a$, dann folgt $a_n\to a$.
+\end{enumerate}
+\emph{Hinweis: Diese zwei Aussagen wurden im Beweis von Lemma 43 verwendet.
+Es ist sinnvoll, diesen nach dem Bearbeiten der Übungsaufgabe zu wiederholen.}
 \newpage
 
 
