Hint for exercise 6.1

--- a/homeworks/06/sol/06.tex
+++ b/homeworks/06/sol/06.tex
@@ -28,6 +28,8 @@ Seien $X_1,X_2,\dots$ \emph{iid} uniform auf $[0,1]$ verteilt.
 Weiter sei $f\in L^1([0,1])$.
 Zeigen Sie, dass die Monte-Carlo Simulation $\hat{I}_n:=\frac{1}{n}\sum_{i=1}^nf(X_i)$ fast sicher gegen das Integral $\int_0^1f(x)\mathrm{d}x$ konvergiert.
 
+Beispiel 5.21 in \cite{klenke}, funktioniert mit starkem Gesetz der großen Zahlen.
+
 \emph{Siehe hierzu, was wir in der Letzten Vorlesung dazu hatten. (24.5. Minute 23)}
 Es gilt
 \begin{align*}
