Added something to ex2

--- a/homeworks/06/sol/06.tex
+++ b/homeworks/06/sol/06.tex
@@ -59,6 +59,10 @@ Zeigen Sie, dass die $X_i^{(n)}$ dem schwachen Gesetz der großen Zahlen genüge
 \[
 \frac{1}{n}\sum_{i=1}^n\bigl(X_i^{(n)}-E\bigl[X_i^{(n)}\bigr]\bigr)\xrightarrow{P}0,\quad n\to\infty\,.
 \]
+Die $X_i^{(n)}$ genügen dem starken Gesetz der großen Zahlen, wie es in Theorem 50 steht, denn ihre Varianz ist endlich.
+\emph{Allerdings ist die Notation mit dem ${}^{(n)}$ unverständlich, das müsste man noch näher prüfen, insbesondere, ob die Voraussetzungen des starken Gesetzes der Großen Zahlen mit $L^2$-Voraussetzung erfüllt werden.}
+Da das schwache Gesetz der großen Zahlen aus dem starken folgt, genügen die $X_i^{(n)}$ dem schwachen Gesetz der großen Zahlen.
+
 
 Es sei $(X_n)_{n\geq2}$ eine Folge unabhängiger Zufallsvariablen mit
 \[
