--- a/homeworks/06/sol/06.tex
+++ b/homeworks/06/sol/06.tex
@@ -62,7 +62,38 @@ Zeigen Sie, dass die $X_i^{(n)}$ dem schwachen Gesetz der großen Zahlen genüge
 Die $X_i^{(n)}$ genügen dem starken Gesetz der großen Zahlen, wie es in Theorem 50 steht, denn ihre Varianz ist endlich.
 \emph{Allerdings ist die Notation mit dem ${}^{(n)}$ unverständlich, das müsste man noch näher prüfen, insbesondere, ob die Voraussetzungen des starken Gesetzes der Großen Zahlen mit $L^2$-Voraussetzung erfüllt werden.}
 Da das schwache Gesetz der großen Zahlen aus dem starken folgt, genügen die $X_i^{(n)}$ dem schwachen Gesetz der großen Zahlen.
+\emph{Es ist nicht ganz klar, wie man die einzelnen $Y_i$ für das schwache Gesetz der großen Zahlen kriegt.
+  Die $X_i^{(n)}$ haben für die ersten paar $n$ folgende Struktur.}
+\begin{align*}
+  n=1\colon&X_1^{(1)}\\
+  n=2\colon&X_1^{(2)},X_2^{(2)}\\
+  n=3\colon&X_1^{(3)},X_2^{(3)},X_3^{(3)}\\
+  \vdots&
+\end{align*}
+\emph{Es ist irgendwie nicht klar, dass $\lim_{k\to\infty}X_n^{(k)}$ existiert, beziehungsweise, wie man an dieses kommt.}
 
+\emph{Eine Idee könnte sein, die Maximalungleichung aus Satz 42 zu verwenden.}
+Seien $\varepsilon,\delta>0$ gegeben und betrachte für jedes $n\in\mathbb{N}$ die Folge $(Y_i)_{i\in\mathbb{N}}$ gegeben durch
+\[
+  Y_i=
+  \begin{cases}
+    \frac{X_i^{(n)}}{n}&\text{ falls $i\leq n$ und}\\
+    0&\text{ sonst}\,.
+  \end{cases}
+\]
+Da $X_i^{(n)}\in L^2$ gilt auch $Y_i\in L^2$.
+Da nach Aufgabenstellung gilt, dass $\lim_{n\to\infty}\frac{1}{n^2}\sum_{i=1}^n\operatorname{Var}\bigl[X_i^{(n)}\bigr]=\lim_{n\to\infty}\sum_{i=1}^n\operatorname{Var}\bigl[Y_i\bigr]=0$, kann ich $n_0$ so wählen, dass für alle $n\geq n_0$ gilt $\frac{1}{\varepsilon^2}\sum_{i=1}^n\operatorname{Var}(Y_i)<\delta$.
+Wir haben dann mit der Definition von $(Y_i)_i$
+\begin{align*}
+  P\Bigl(\frac{1}{n}\sum\nolimits_{i=1}^n\bigl(X_i^{(n)}-E[X_i^{(n)}]\bigr)>\varepsilon\Bigr)
+  &=P\Bigl(\sup_{n\in\mathbb{N}}\Bigl|\sum\nolimits_{i=1}^nY_i-E[Y_i]\Bigr|>\varepsilon\Bigr)\,,
+    \intertext{sowie nach der Maximalungleichung aus Satz 42}
+  &\leq \frac{\sum_{i=1}^\infty\operatorname{Var}(Y_i)}{\varepsilon^2}\,.
+    \intertext{Nach der Wahl von $n_0$ gilt für alle $n\geq n_0$, dass $\frac{1}{\varepsilon^2}\sum_{i=1}^n\operatorname{Var}(Y_i)<\delta$.
+    Somit gilt insgesamt schließlich}
+    <\delta\,,
+\end{align*}
+sodass $\frac{1}{n}\sum_{i=1}^n(X_i^{(n)}-E[X_i^{(n)}])\xrightarrow{P}0$.
 
 Es sei $(X_n)_{n\geq2}$ eine Folge unabhängiger Zufallsvariablen mit
 \[
