Started something on part 2 of ex 2 in sheet 6

--- a/homeworks/06/sol/06.tex
+++ b/homeworks/06/sol/06.tex
@@ -91,6 +91,11 @@ Zeigen Sie, dass die Folge dem schwachen Gesetz der großen Zahlen genügt, in d
 \]
 
 %https://math.stackexchange.com/questions/1288502/sequence-satisfies-weak-law-of-large-numbers-but-doesnt-satisfy-strong-law-of-l
+%https://dspace.mit.edu/bitstream/handle/1721.1/70477/6-042j-fall-2002/contents/lecture-notes/cp15Msol.pdf
+
+Wir wollen die Chebycheff-Ungleichung verwenden.
+Hiernach gilt ...
+
 
 Zeigen Sie weiter, dass die obige Folge nicht fast sicher konvergiert und sie somit nicht dem Gesetz der großen Zahlen genügt.
 Verwenden Sie dazu das Lemma von Borel--Cantelli.
