--- a/homeworks/06/sol/06.tex
+++ b/homeworks/06/sol/06.tex
@@ -129,7 +129,12 @@ Dann gilt für jedes $\varepsilon>0$
 \]
 \emph{Hinweis: Definieren Sie $k_n=2^n$ und $l(n)=n^{1/2}(\log(n))^{1/2+\varepsilon}$ für $n\in\mathbb{N}$ und betrachten Sie $l(k_{n+1})/l(k_n)$.
   Zeigen Sie, dass für hinreichend großes $n$ und für $k\in\mathbb{N}$ mit $k_{n-1}\leq k\leq k_n$ gilt $\frac{|S_k|}{l(k)}\leq\frac{2|S_k|}{l({k_n})}$.
-Verwenden Sie nun die Kolmogorov'sche Ungleichung und Borel--Cantelli, um zu zeigen, dass für beliebiges $\delta>0$ gilt, dass $\limsup_{n\to\infty}l(k_n)^{-1}\max\{|S_k|: k\leq k_n\}\leq\delta$ fast sicher.}
+  Verwenden Sie nun die Kolmogorov'sche Ungleichung und Borel--Cantelli, um zu zeigen, dass für beliebiges $\delta>0$ gilt, dass $\limsup_{n\to\infty}l(k_n)^{-1}\max\{|S_k|: k\leq k_n\}\leq\delta$ fast sicher.}
+
+Das ist Satz 5.29 in \cite{klenke}.
+Zu $l(k_{n+1})/l(k_n)$ ist zu sagen, dass $l(k_{n+1})/l(k_n)>1$, denn $\log$ und $n\mapsto 2^n$ sind monoton steigend.
+
+
 \newpage
 
 \paragraph{B6A4}
